<resources>
    <string name="app_name">PruebaM3</string>
    <string name="correo">Correo</string>
    <string name="clave">Contraseña</string>
    <string name="ingresar">login</string>
    <string name="Pregunta1">¿Están bien las luces?</string>
    <string name="Pregunta2">Aparatos de Dormitorio</string>
    <string name="Pregunta3">Cocina y Logia</string>
    <string name="Pregunta4">Water</string>
    <string name="si">Si</string>
    <string name="Pregunta5">Terminaciones</string>
    <string name="logo">Logo</string>
    <string name="normal">Normal</string>
    <string name="regular">Regular</string>
    <string name="malo">Malo</string>
    <string name="check">Check</string>
    <string name="guardar">Guardar</string>
    <string name="report">Reporte</string>
    <string name="title_activity_check_list2">CheckList2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>