<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckList">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/Pregunta1"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:text="@string/Pregunta1" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/si"
                android:textColor="#3F51B5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/Pregunta2"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:text="@string/Pregunta2" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/si"
                android:textColor="#3F51B5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/Pregunta3"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:text="@string/Pregunta3" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/si"
                android:textColor="#3F51B5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="38dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:text="@string/Pregunta4"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:text="@string/Pregunta4" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/si"
                android:textColor="#3F51B5" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/pregunta"
        android:layout_width="380dp"
        android:layout_height="139dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.060000002">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Pregunta5"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:text="@string/Pregunta5" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:textColor="#3F51B5" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regular"
            android:textColor="#3F51B5" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/malo"
            android:textColor="#3F51B5" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/check"
        android:textColor="#008EFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/guardar"
        app:layout_constraintStart_toStartOf="@+id/pregunta"
        app:layout_constraintTop_toBottomOf="@+id/pregunta" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:text="@string/report"
        app:layout_constraintEnd_toEndOf="@+id/pregunta"
        app:layout_constraintTop_toBottomOf="@+id/pregunta" />

    <CheckedTextView
        android:id="@+id/checkedTextView"
        android:layout_width="304dp"
        android:layout_height="34dp"
        android:layout_marginTop="36dp"
        android:text="CheckedTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pregunta" />

</androidx.constraintlayout.widget.ConstraintLayout>